--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,26 +12,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    
-    - name: Run tests
-      run: |
-        npm install
-        npm test
+    - run: npm install && npm test
 
   docker-push:
     needs: build-test
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
+    - uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-        
-    - name: Build and push
-      uses: docker/build-push-action@v4
+    - uses: docker/build-push-action@v4
       with:
         context: .
         push: true
@@ -42,41 +34,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-
-    - name: Install dependencies
+    
+    - name: Setup Minikube
       run: |
         sudo apt-get update
         sudo apt-get install -y conntrack
-
-    - name: Start Minikube
-      run: |
         minikube start --driver=docker
-        minikube update-context
-        kubectl config view
-
-    - name: Deploy manifests
-      run: |
-        kubectl apply -f k8s/
-        kubectl get pods
-        kubectl get svc
-    
-    - name: Set up kubectl
-      uses: azure/setup-kubectl@v3
-      with:
-        version: 'v1.29.0'  # Можно изменить версию
+        minikube status
         
-    - name: Deploy to Kubernetes
-      env:
-        KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
+    - name: Deploy application
       run: |
-        mkdir -p ~/.kube
-        echo "$KUBE_CONFIG" | base64 -d > ~/.kube/config
-        # Добавьте проверку сертификатов
-        kubectl config set-cluster minikube --server=$(kubectl config view -o jsonpath='{.clusters[0].cluster.server}')
-        kubectl config set-context minikube --cluster=minikube --user=minikube
-        kubectl config use-context minikube
         kubectl apply -f k8s/
-        kubectl apply -f k8s/deployment.yaml
-        kubectl apply -f k8s/service.yaml
         kubectl rollout status deployment/my-simple-app
+        minikube service list
         
