--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,49 +1,33 @@
-name: CI/CD with Kubernetes
+deploy-k8s:
+  needs: docker-push
+  runs-on: ubuntu-latest
+  steps:
+  - uses: actions/checkout@v4
+  
+  - name: Setup Minikube with certificates
+    run: |
+      sudo apt-get update
+      sudo apt-get install -y conntrack
+      
+      # Стартуем Minikube с встроенными сертификатами
+      minikube start --driver=docker --embed-certs
+      
+      # Обновляем конфигурацию kubectl
+      minikube update-context
+      
+      # Проверяем подключение
+      kubectl cluster-info
+      kubectl get nodes
 
-on:
-  push:
-    branches: [main]
-
-env:
-  DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/my-simple-app
-
-jobs:
-  build-test:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - run: npm install && npm test
-
-  docker-push:
-    needs: build-test
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - uses: docker/build-push-action@v4
-      with:
-        context: .
-        push: true
-        tags: ${{ env.DOCKER_IMAGE }}:latest
-
-  deploy-k8s:
-    needs: docker-push
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Setup Minikube
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y conntrack
-        minikube start --driver=docker
-        minikube status
-        
-    - name: Deploy application
-      run: |
-        kubectl apply -f k8s/
-        minikube service list
+  - name: Deploy application
+    run: |
+      # Используем minikube kubectl для автоматического управления сертификатами
+      minikube kubectl -- apply -f k8s/
+      
+      # Проверяем статус
+      minikube kubectl -- get pods
+      minikube kubectl -- get svc
+      
+      # Получаем URL сервиса
+      minikube service list
         
